<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/start"
    tools:context=".ui.start.StartFragment">

    <TextView
        android:id="@+id/tv_city_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cv_search"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/city_search"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_city_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="5dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_city_name_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        android:background="@null"
        android:hint="Enter city name here"/>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btn_start_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/cv_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/search"/>

    <TextView
        android:id="@+id/tv_find_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_start_search"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/we_can_find_you"/>

    <Button
        android:id="@+id/btn_find_by_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_find_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/find_me"/>

    <Button
        android:id="@+id/btn_start_favourite_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toBottomOf="@id/btn_find_by_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/go_to_my_favourite"/>

</androidx.constraintlayout.widget.ConstraintLayout>